...
                    android:layout_marginTop="10dp"
                    android:textSize="16sp" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/snapshot_spinner" />

                <TextView
                    android:text="Threshold in pixel (250-18000)"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView12"
...
